[tool.poetry]
name = "html_to_pdf"
version = "0.1.0"
description = ""
authors = ["Djapy <djapy@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7"
aiohttp_debugtoolbar = "^0.5.0"
pyaml = "^18.11"
toml = "^0.10.0"
motor = "^2.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"